--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 asgiref==3.3.4
+Brotli==1.0.9
 Django==3.2
 django-environ==0.4.5
 django-filter==2.4.0
 django-webpack-loader==0.7.0
 djangorestframework==3.12.4
+mysqlclient==1.4.6
 Pillow==8.2.0
 pytz==2021.1
 sqlparse==0.4.1
