--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-environ==0.4.5
 django-filter==2.4.0
 django-webpack-loader==0.7.0
 djangorestframework==3.12.4
+gunicorn==20.1.0
 Markdown==3.3.4
 mysqlclient==1.4.6
 Pillow==8.2.0
