--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,5 +34,5 @@ jobs:
           REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
           REMOTE_USER: ${{ secrets.REMOTE_USER }}
           ARGS: '-avz'
-          TARGET: '/data/aweffr_com_test'
+          TARGET: '/data/aweffr_com_prod'
           EXCLUDE: '/frontend/node_modules'
