--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,7 @@ jobs:
         env:
           DJANGO_SETTINGS_MODULE: 'mysite.settings.build'
           SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY_FOR_BUILD }}
+      - run: rm -f mysite/settings/.env
       - name: ssh deploy
         uses: easingthemes/ssh-deploy@v2.1.6
         env:
